--- a/html/product.html
+++ b/html/product.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
+
     <link rel="stylesheet" href="../css/product.css">
     <title>產品</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- owl.carousel -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 </head>
 
 <body>
@@ -18,9 +24,9 @@
     <header>
         <nav>
             <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.svg" alt=""></a>
             </h1>
-            <ul>
+            <ul class="menu">
                 <li><a href="about.html">關於我們</a></li>
                 <li><a href="product.html">產品</a></li>
                 <li><a href="giftbox.html">禮盒</a></li>
@@ -28,116 +34,204 @@
                 <li><a href="contactus.html">聯絡我們</a></li>
                 <li><a href="login_out.html">註冊/登入</a></li>
             </ul>
+            <button type="button" class="btn_switch">
+                <span class="-hr -top"></span>
+                <span class="-hr -middle"></span>
+                <span class="-hr -bottom"></span>
+            </button>
         </nav>
     </header>
 
-    <!-- product -->
+
     <div class="wrapper">
 
+        <!----------- breadcrumb ------------>
 
-        <h3 class="pro">產品</h3>
 
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
+            </li>
+
+            <li>
+                <p>產品</p>
+            </li>
+        </ol>
+
+        <!---------- product ------------>
         <!-- 點心 -->
         <div class="des1">
-            <h2>點心</h2>
+            <div data-aos="zoom-in-down" data-aos-duration="1000">
+                <h2>點心</h2>
+            </div>
+            <!-- <div> -->
             <ul>
-                <li>
-                    <img src="../img/almondTuiles 2.png" alt="">
-                    <p>產品: 杏仁薄片<br>
-                        詳細資訊: 每片餅乾的塑形為手工製作，故形狀部份不工整<br>
-                        售價: $230元<br>
-                        保存期限: 常溫14天
-                    </p>
-                </li>
-                <li>
-                    <img src="../img/SnowQ.jpg" alt="">
-                    <p>產品 : 雪Q餅<br>
-                        口味: 花生、蔓越莓、可可<br>
-                        詳細資訊: 甜的棉花糖搭配鹹的餅乾，<br>
-                        再搭配微酸的蔓越莓，讓餅充滿層次~<br>
-                        售價: (蔓越莓) 盒裝$160.袋裝140<br>
-                        (花生) 盒裝$160.袋裝$140<br>
-                        (可可) 盒裝$150.袋裝$130<br>
-                        保存期限: 常溫20天
-                    </p>
-                </li>
-                <li>
-                    <img src="../img/mohcibread.png" alt="">
-                    <p>產品名稱: 麻糬麵包<br>
-                        詳細資訊: 一顆顆小小的好入口，外酥內Q的口感，絕配~<br>
-                        售價: $55元<br>
-                        保存期限: 常溫3天/冷藏5天
-                    </p>
-                </li>
-
-            </ul>
-        </div>
-
-        <div class="des2">
-            <ul>
-                <li>
-                    <img src="../img/brownie.jpg" alt="">
-                    <p>產品名稱: 布朗尼<br>
-                        詳細資訊: 介於餅乾與蛋糕間的口感，<br>
-                        即使是巧克力卻甜而不膩<br>
-                        售價: $160<br>
-                        保存期限: 室溫3天.冷藏5天
-                    </p>
-                </li>
-                <li>
-                    <img src="../img/originalcookie.jpg" alt="">
-                    <p>產品名稱: 原味曲奇餅乾<br>
-                        詳細資訊: 酥脆而不油膩，每片純手工擠花製成<br>
-                        售價: 罐裝$110.袋裝$90<br>
-                        保存期限: 常溫14天
-                    </p>
-                </li>
-                <li>
-                    <a href="">
-                        <!-- <img src="../img/matchacookie2.jpg" alt=""> -->
-                        <p>產品名稱: 抹茶、可可曲奇餅乾<br>
-                            詳細資訊: 酥脆而不油膩，每片純手工擠花製成<br>
-                            售價: 罐裝$120.袋裝$100<br>
-                            保存期限: 常溫14天
-                        </p>
+                <li class="flip" data-aos="zoom-in-down" data-aos-duration="1000">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/boncake.png" alt="">
+                        <p>磅蛋糕</p>
                     </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip" data-aos="zoom-in-down" data-aos-duration="1000">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/snowq.png" alt="">
+                        <p>雪Q餅</p>
+                    </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip" data-aos="zoom-in-down" data-aos-duration="1000">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/pumpkin.png" alt="">
+                        <p>南瓜塔派</p>
+                    </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip" data-aos="zoom-in-up" data-aos-duration="1000">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/brownie.png" alt="">
+                        <p>布朗尼</p>
+                    </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip" data-aos="zoom-in-up" data-aos-duration="1000">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/matchabread.png" alt="">
+                        <p>抹茶麵包</p>
+                    </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip" data-aos="zoom-in-up" data-aos-duration="1000">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/tiramisubread.png" alt="">
+                        <p>提拉米蘇麵包</p>
+                    </a>
+                    <a href="#" class="back"></a>
                 </li>
             </ul>
+            <!-- </div> -->
+
         </div>
+
+        <!-- 768px以下改輪播 -->
+        <section>
+            <div class="owl-carousel owl-theme slide" id='one'>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/boncake.png" alt="">
+                            <p>磅蛋糕</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/snowq.png" alt="">
+                            <p>雪Q餅</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/pumpkin.png" alt="">
+                            <p>南瓜塔派</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/brownie.png" alt="">
+                            <p>布朗尼</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/matchabread.png" alt="">
+                            <p>抹茶麵包</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/tiramisubread.png" alt="">
+                            <p>提拉米蘇麵包</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+            </div>
+        </section>
 
         <!-- 蛋糕 -->
-
-        <div class="cake">
+        <div class="cake js-slide js-slide-rotate-l js-active">
             <h2>蛋糕</h2>
             <ul>
-                <li>
-                    <img src="../img/blueberrycheesecake 1.jpg" alt="">
-                    <p>產品名稱: 藍莓起司蛋糕<br>
-                        詳細資訊: 底部是Oreo.中間是原味.上層為藍莓，冷凍取出退冰約10分鐘就是冰淇淋的口感<br>
-                        售價: $600(6吋)<br>
-                        保存期限: 冷凍7天.冷藏3天</p>
-                </li>
-                <li>
-                    <img src="../img/millecrepecake 1.jpg" alt="">
-                    <p>產品名稱: 原味千層蛋糕<br>
-                        詳細資訊: 此商品含牛奶及鮮奶油成份<br>
-                        如有需做微客製化當生日 蛋糕，可另外討論~ (ex:蛋糕上放生日.名字...)<br>
-                        售價: $580(6吋)<br>
-                        保存期限:冷藏7天</p>
-                </li>
-                <li>
-                    <a href="">
-                        <!-- <img src="../img/chocolatecake 1.jpg" alt=""> -->
-                        <p class="chocake">產品名稱: 可可、抹茶千層蛋糕<br>
-                            詳細資訊: 此商品含牛奶及鮮奶油成份<br>
-                            如需微客製化當生日蛋糕，可另外討論~(ex:蛋糕上放生日.名字...)<br>
-                            售價: $650(6吋)<br>
-                            保存期限: 冷藏7天</p>
+                <li class="flip">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/blueberry_cheese_cake.png" alt="">
+                        <p>藍莓起司蛋糕</p>
                     </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/millecrepecake.png" alt="">
+                        <p>千層蛋糕</p>
+                    </a>
+                    <a href="#" class="back"></a>
+                </li>
+                <li class="flip">
+                    <a href="product_in.html" class="front">
+                        <img src="../img/cake3.png" alt="">
+                        <p class="chocake">三層式草莓蛋糕</p>
+                    </a>
+                    <a href="#" class="back"></a>
                 </li>
             </ul>
         </div>
-
+        <!-- 768px以下改輪播 -->
+        <section>
+            <div class="owl-carousel owl-theme slide" id='two'>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/blueberry_cheese_cake.png" alt="">
+                            <p>藍莓起司蛋糕</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/millecrepecake.png" alt="">
+                            <p>千層蛋糕</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+                <div class="item">
+                    <li class="flip">
+                        <a href="product_in.html" class="front">
+                            <img src="../img/cake3.png" alt="">
+                            <p class="chocake">三層式草莓蛋糕</p>
+                        </a>
+                        <a href="#" class="back"></a>
+                    </li>
+                </div>
+            </div>
+        </section>
 
         <!-- timeline -->
         <div class="wrap">
@@ -172,13 +266,16 @@
             <h3>追蹤我們</h3>
             <ul>
                 <li>
-                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i
+                            class="fab fa-line"></i></a>
                 </li>
             </ul>
         </div>
@@ -187,6 +284,61 @@
         </div>
 
     </footer>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="../js/base.js"></script>
+
+    <!-- Owl -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
+
+    <script>
+        $("#one").owlCarousel({
+            loop: true, // 循環播放
+            margin: 10, // 外距 10px
+            nav: false, // 顯示點點
+            autoplay: true, // 自動輪播
+            autoplaySpeed: 1000,
+            autoplayTimeout: 3000, // 切換時間
+            autoplayHoverPause: true, // 滑鼠經過時暫停
+            responsive: {
+                0: {
+                    items: 1 // 螢幕大小為 0~768 顯示 1 個項目
+                },
+                768: {
+                    items: 2 // 螢幕大小為 768~1000 顯示 2 個項目
+                },
+                1000: {
+                    items: 3 // 螢幕大小為 1000 以上 顯示 3 個項目
+                }
+            }
+        });
+        $("#two").owlCarousel({
+            loop: true, // 循環播放
+            margin: 10, // 外距 10px
+            nav: false, // 顯示點點
+            autoplay: true, // 自動輪播
+            autoplaySpeed: 1000,
+            autoplayTimeout: 3000, // 切換時間
+            autoplayHoverPause: true, // 滑鼠經過時暫停
+            responsive: {
+                0: {
+                    items: 1 // 螢幕大小為 0~768 顯示 1 個項目
+                },
+                768: {
+                    items: 2 // 螢幕大小為 768~1000 顯示 2 個項目
+                },
+                1000: {
+                    items: 3 // 螢幕大小為 1000 以上 顯示 3 個項目
+                }
+            }
+        });
+    </script>
 
 </body>
 
