--- a/html/questions.html
+++ b/html/questions.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/questions.css">
     <title>常見問題</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-    
+
     <!--------nav-------------->
-    <header>    
+    <header>
         <nav>
             <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.svg" alt=""></a>
             </h1>
-            <ul>
+            <ul class="menu">
                 <li><a href="about.html">關於我們</a></li>
                 <li><a href="product.html">產品</a></li>
                 <li><a href="giftbox.html">禮盒</a></li>
@@ -27,36 +27,51 @@
                 <li><a href="contactus.html">聯絡我們</a></li>
                 <li><a href="login_out.html">註冊/登入</a></li>
             </ul>
+            <button type="button" class="btn_switch">
+                <span class="-hr -top"></span>
+                <span class="-hr -middle"></span>
+                <span class="-hr -bottom"></span>
+            </button>
         </nav>
     </header>
 
-    <div class="wrapper">    
-        <!-- questions -->
-        
-            <h3 class="que">常見問題</h3>
+    <div class="wrapper">
 
-            <div class="qa">
-                <p>若有任何問題請參考以下資訊</p>
-                <a class="q1" href="#hide"
-                    onclick="if(document.getElementById('hide') .style.display=='none') {document.getElementById('hide') .style.display=''}else{document.getElementById('hide') .style.display='none'}"
-                    title="" type="button">訂購方式</a>
-                <span class="line"></span>
-                <div id="hide" style="display: none;">
-                    目前可透過line或facebook messenger訊息訂購，<br>將會有專人回覆，謝謝~
-                </div>
-                <a class="q2" href="#hide2"
-                    onclick="if(document.getElementById('hide2') .style.display=='none') {document.getElementById('hide2') .style.display=''}else{document.getElementById('hide2') .style.display='none'}"
-                    title="" type="button">配送方式</a>
-                <div id="hide2" style="display: none;">
-                    目前頭份可面交，外縣市訂購滿千可超商店到店免運費，或是使用黑貓宅急便配送~
-                </div>
-                <a class="q3" href="#hide3"
-                    onclick="if(document.getElementById('hide3') .style.display=='none') {document.getElementById('hide3') .style.display=''}else{document.getElementById('hide3') .style.display='none'}"
-                    title="" type="button">可否指定到貨日期與時段</a>
-                <div id="hide3" style="display: none;">
-                    凡是於特殊節慶無法指定，其餘時段到貨日以黑貓宅急便為主~
-                </div>
+        <!----------- breadcrumb ------------>
+
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
+            </li>
+
+            <li>
+                <p>常見問題</p>
+            </li>
+        </ol>
+
+        <!-- questions -->
+        <div class="qa">
+            <p>若有任何問題請參考以下資訊</p>
+            <a class="q1" href="#hide"
+                onclick="if(document.getElementById('hide') .style.display=='none') {document.getElementById('hide') .style.display=''}else{document.getElementById('hide') .style.display='none'}"
+                title="" type="button">訂購方式</a>
+            <span class="line"></span>
+            <div id="hide" style="display: none;">
+                目前可透過line或facebook messenger訊息訂購，<br>將會有專人回覆，謝謝~
             </div>
+            <a class="q2" href="#hide2"
+                onclick="if(document.getElementById('hide2') .style.display=='none') {document.getElementById('hide2') .style.display=''}else{document.getElementById('hide2') .style.display='none'}"
+                title="" type="button">配送方式</a>
+            <div id="hide2" style="display: none;">
+                目前頭份可面交，外縣市訂購滿千可超商店到店免運費，或是使用黑貓宅急便配送~
+            </div>
+            <a class="q3" href="#hide3"
+                onclick="if(document.getElementById('hide3') .style.display=='none') {document.getElementById('hide3') .style.display=''}else{document.getElementById('hide3') .style.display='none'}"
+                title="" type="button">可否指定到貨日期與時段</a>
+            <div id="hide3" style="display: none;">
+                凡是於特殊節慶無法指定，其餘時段到貨日以黑貓宅急便為主~
+            </div>
+        </div>
     </div>
 
     <!-- 頁尾 -->
@@ -66,13 +81,16 @@
             <h3>追蹤我們</h3>
             <ul>
                 <li>
-                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i
+                            class="fab fa-line"></i></a>
                 </li>
             </ul>
         </div>
@@ -82,6 +100,14 @@
 
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="../js/base.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script src=”https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js”></script>
 
 </body>
 
